--- a/config/production/hugo.toml
+++ b/config/production/hugo.toml
@@ -13,7 +13,7 @@ relativeURLs = "true"
 #canonifyURLs = "true"
 
 # Local
-baseURL = "/"
+baseURL = "https://a-casa-di-molly.netlify.app/"
 publishDir = "public"
 
 # Remote
