--- a/config/development/hugo.toml
+++ b/config/development/hugo.toml
@@ -14,6 +14,7 @@ relativeURLs = "true"
 
 # Local
 baseURL = "/"
+baseURL = "https://a-casa-di-molly.netlify.app/"
 publishDir = "public"
 
 # Remote
