Adding URLs to all folders

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -16,7 +16,7 @@ baseURL = "https://a-casa-di-molly.netlify.app/"
 publishDir = "public"
 
 # Remote
-#baseURL = "https://caressofsteel.github.io/demos/hugo/hugo-story/"
+baseURL = "https://a-casa-di-molly.netlify.app/"
 #publishDir = "//centos/sites/hugodev/hugostory/"
 
 
