--- a/config/development/hugo.toml
+++ b/config/development/hugo.toml
@@ -13,12 +13,12 @@ relativeURLs = "true"
 #canonifyURLs = "true"
 
 # Local
-baseURL = "/"
+#baseURL = "/"
 baseURL = "https://a-casa-di-molly.netlify.app/"
 publishDir = "public"
 
 # Remote
-#baseURL = "https://caressofsteel.github.io/demos/hugo/hugo-story/"
+baseURL = "https://a-casa-di-molly.netlify.app/"
 #publishDir = "//centos/sites/hugodev/hugostory/"
 
 ## -----------------------------------------------
